change author name

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "minib/shikimori-api-php",
+  "name": "yangusik/shikimori-api-php",
   "description": "A PHP wrapper for Shikimori API",
   "type": "library",
   "license": "MIT",
