--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,3 +23,5 @@ jobs:
       - run: composer install
       - run: composer test
       - run: php vendor/bin/php-coveralls -v
+      - name: Purge README Images
+        run: make purge
