--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,4 +24,4 @@ jobs:
       - run: composer test
       - run: php vendor/bin/php-coveralls -v
       - name: Purge README Images
-        run: make purge
+      - run: make purge
